--- a/archives/2020-11-27.md
+++ b/archives/2020-11-27.md
@@ -1,59 +1,63 @@
 # 2020-11-27
 
-共 136 条
+共 139 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Fri Nov 27 2020 14:01:42 GMT+0800 (CST) -->
+<!-- 最后更新时间 Fri Nov 27 2020 15:01:13 GMT+0800 (CST) -->
 1. [如何评价哈工大学生举报宿管阿姨感恩节送巧克力，称「作为宿舍辅导员，宣传这种西方节日，非常不妥」？](https://www.zhihu.com/question/432119474)
-1. [iPhone 12物料成本才2498，为何敢卖6299？](https://www.zhihu.com/question/431958623)
-1. [外卖员写字楼送餐只能坐货梯，高峰时段还被收 3 元代送费，物业称给外卖员多一种选择，此举存在什么问题？](https://www.zhihu.com/question/432110307)
-1. [特斯拉车顶玻璃为什么会被大风掀飞？可能会是哪些原因导致的？](https://www.zhihu.com/question/431566797)
-1. [进化成适应内卷的生物会是什么样？](https://www.zhihu.com/question/431703495)
-1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
-1. [我是女生， 32岁，上个月离婚了，大家帮我看一下这段关系中的问题是什么?](https://www.zhihu.com/question/421736426)
-1. [北京一女孩连续加班半个月，生日当天被叫回加班在网约车上崩溃大哭，如果你是老板或者当事人，你会怎么做？](https://www.zhihu.com/question/431978333)
-1. [如何评价《流浪地球：飞跃 2020 特别版》？新增的十分钟让你看到了哪些细节？](https://www.zhihu.com/question/431751282)
-1. [如何评价电视剧《棋魂》大结局？满意度如何（如果可以用百分数来表示）？](https://www.zhihu.com/question/432041591)
-1. [《流浪地球 2》官宣定档 2023 年大年初一，导演表示剧本构思已经初步完成，你猜测故事会怎么发展？](https://www.zhihu.com/question/432161529)
 1. [如何看待任正非谈剥离荣耀，称「我们不因自己受难而要拖无辜的人下水」？](https://www.zhihu.com/question/432144366)
+1. [iPhone 12物料成本才2498，为何敢卖6299？](https://www.zhihu.com/question/431958623)
+1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
+1. [拉屎拉到干净是种怎样的体验？](https://www.zhihu.com/question/59725811)
+1. [特斯拉车顶玻璃为什么会被大风掀飞？可能会是哪些原因导致的？](https://www.zhihu.com/question/431566797)
+1. [外卖员写字楼送餐只能坐货梯，高峰时段还被收 3 元代送费，物业称给外卖员多一种选择，此举存在什么问题？](https://www.zhihu.com/question/432110307)
+1. [我是女生， 32岁，上个月离婚了，大家帮我看一下这段关系中的问题是什么?](https://www.zhihu.com/question/421736426)
+1. [进化成适应内卷的生物会是什么样？](https://www.zhihu.com/question/431703495)
+1. [《流浪地球 2》官宣定档 2023 年大年初一，导演表示剧本构思已经初步完成，你猜测故事会怎么发展？](https://www.zhihu.com/question/432161529)
+1. [如何评价《流浪地球：飞跃 2020 特别版》？新增的十分钟让你看到了哪些细节？](https://www.zhihu.com/question/431751282)
 1. [如何评价Redmi11月26日发布的Redmi Watch智能手表？](https://www.zhihu.com/question/432150278)
-1. [《王者荣耀》「最强王者」段位是否缩水了？](https://www.zhihu.com/question/381376218)
 1. [如何看待 58 岁男子网恋见面十天转账 160 万，分手后想要回两次被判赠与？](https://www.zhihu.com/question/432200591)
+1. [杭州一女保洁误入男浴室撞见领导洗澡被罚 2000 元，物业表示「撞见领导洗澡，比较严重」，罚款合理吗？](https://www.zhihu.com/question/432092160)
+1. [为什么动物是雄性漂亮，而人正相反？](https://www.zhihu.com/question/431261008)
+1. [如何评价电视剧《棋魂》大结局？满意度如何（如果可以用百分数来表示）？](https://www.zhihu.com/question/432041591)
+1. [《王者荣耀》「最强王者」段位是否缩水了？](https://www.zhihu.com/question/381376218)
+1. [如何改善出租车司机越来越不赚钱的现状？](https://www.zhihu.com/question/432136728)
 1. [为什么有人可以顿顿吃火锅，吃火锅到底在吃什么？](https://www.zhihu.com/question/431847551)
 1. [纣王为什么要选择自焚?](https://www.zhihu.com/question/339629339)
-1. [为什么动物是雄性漂亮，而人正相反？](https://www.zhihu.com/question/431261008)
-1. [杭州一女保洁误入男浴室撞见领导洗澡被罚 2000 元，物业表示「撞见领导洗澡，比较严重」，罚款合理吗？](https://www.zhihu.com/question/432092160)
-1. [如何改善出租车司机越来越不赚钱的现状？](https://www.zhihu.com/question/432136728)
-1. [如何把一页PPT做得又拥挤又清楚？](https://www.zhihu.com/question/345405596)
 1. [如何看待公证处回应老人送房给水果摊主「反复确认后办理公证」，摊主表示「赡养老人十年，获房心安理得」？](https://www.zhihu.com/question/432060850)
 1. [王者荣耀为什么会有妲己这种严重影响游戏平衡的英雄？](https://www.zhihu.com/question/431098746)
+1. [美团或增加骑手评价商户功能，如何看待这一功能？分别会对骑手、商户、消费者三方产生什么影响?](https://www.zhihu.com/question/432118341)
 1. [我觉得我这张画的贼好看，从客观角度看有什么问题?](https://www.zhihu.com/question/429402759)
 1. [你为什么不化妆？](https://www.zhihu.com/question/403494008)
-1. [单位一个老同志在领导办公室当场发飙，然后摔领导门而去，如果你是领导，你会怎么做？](https://www.zhihu.com/question/360202125)
-1. [美团或增加骑手评价商户功能，如何看待这一功能？分别会对骑手、商户、消费者三方产生什么影响?](https://www.zhihu.com/question/432118341)
 1. [为什么机箱这么没技术含量的东西有些会和高端的cpu一样贵？](https://www.zhihu.com/question/59240026)
-1. [原著粉看了真人网剧版《棋魂》有什么感受？](https://www.zhihu.com/question/427629264)
-1. [你对马拉多纳的记忆有哪些，他留下了哪些精彩镜头？](https://www.zhihu.com/question/432021761)
-1. [如果生个三胞胎可怎么办？](https://www.zhihu.com/question/426844813)
-1. [你见过最能吃辣的是哪里人？](https://www.zhihu.com/question/345471945)
-1. [一天喝一升牛奶会怎么样？](https://www.zhihu.com/question/21819343)
 1. [假设每天打车100块，一年打车3w多，十年打车也才30w+，相比买车划算很多，为什么还有那么多人买车？](https://www.zhihu.com/question/407652302)
-1. [如何看待粉丝们寄给丁真的礼物堆成小山，对于粉丝而言追星的意义到底是什么？](https://www.zhihu.com/question/432100730)
+1. [如何把一页PPT做得又拥挤又清楚？](https://www.zhihu.com/question/345405596)
+1. [一天喝一升牛奶会怎么样？](https://www.zhihu.com/question/21819343)
+1. [原著粉看了真人网剧版《棋魂》有什么感受？](https://www.zhihu.com/question/427629264)
+1. [你见过最能吃辣的是哪里人？](https://www.zhihu.com/question/345471945)
+1. [如果生个三胞胎可怎么办？](https://www.zhihu.com/question/426844813)
 1. [河南焦作教育局规定教师不亲自批改作业一律取消职务晋级资格，如何看待这一规定？](https://www.zhihu.com/question/432048707)
+1. [你对马拉多纳的记忆有哪些，他留下了哪些精彩镜头？](https://www.zhihu.com/question/432021761)
+1. [如何看待粉丝们寄给丁真的礼物堆成小山，对于粉丝而言追星的意义到底是什么？](https://www.zhihu.com/question/432100730)
 1. [女孩子长得又胖又丑又黑怎么办？](https://www.zhihu.com/question/424900228)
-1. [男主老实忠犬的小说有哪些？](https://www.zhihu.com/question/323385638)
 1. [现在普遍人的家装里有哪些不是必要的存在?](https://www.zhihu.com/question/37369617)
-1. [你是什么时候发现自己是猫猫的唯一?](https://www.zhihu.com/question/429452848)
-1. [客观评价，儿科医生真的很少人想当吗？](https://www.zhihu.com/question/432074066)
 1. [男生都 26 岁了还买 PS5 ，值得吗?](https://www.zhihu.com/question/422512191)
 1. [你会感激一个让你成长但伤害过你的人吗？](https://www.zhihu.com/question/396395895)
+1. [什么是少女感？有哪些充分体现少女感的妹子？](https://www.zhihu.com/question/30801926)
+1. [你是什么时候发现自己是猫猫的唯一?](https://www.zhihu.com/question/429452848)
+1. [为什么毛巾干了之后会有很大的味道？然而只要一碰水就什么味道都没了？](https://www.zhihu.com/question/46804000)
+1. [客观评价，儿科医生真的很少人想当吗？](https://www.zhihu.com/question/432074066)
 1. [如何看待牛津词典挑不出 2020 年度代表词？你的年度热词是什么？](https://www.zhihu.com/question/431927461)
 1. [你若是崇祯，杀不杀袁崇焕？](https://www.zhihu.com/question/431021526)
-1. [如何看待印度向美国租借两架无人机，印媒称「可用于监视中印边境」？](https://www.zhihu.com/question/432059355)
+1. [单位一个老同志在领导办公室当场发飙，然后摔领导门而去，如果你是领导，你会怎么做？](https://www.zhihu.com/question/360202125)
 1. [你会放弃一个不可能的人吗?](https://www.zhihu.com/question/431624500)
 1. [那些在会计师事务所的年轻人最后都怎么样了？](https://www.zhihu.com/question/345440768)
-1. [养狗的人什么时候觉得狗也爱着你？](https://www.zhihu.com/question/268221776)
 1. [婆婆对儿媳说：我儿子可真听你的话，怎么回才显得情商高？](https://www.zhihu.com/question/431787513)
+1. [日常补水美得像门儿艺术是种怎样的体验？](https://www.zhihu.com/question/431798584)
+1. [北京一女孩连续加班半个月，生日当天被叫回加班在网约车上崩溃大哭，如果你是老板或者当事人，你会怎么做？](https://www.zhihu.com/question/431978333)
+1. [男主老实忠犬的小说有哪些？](https://www.zhihu.com/question/323385638)
+1. [如何看待印度向美国租借两架无人机，印媒称「可用于监视中印边境」？](https://www.zhihu.com/question/432059355)
+1. [养狗的人什么时候觉得狗也爱着你？](https://www.zhihu.com/question/268221776)
 1. [为什么导师总说，科研搞好了，工作随便找？](https://www.zhihu.com/question/431895921)
 1. [怎么看待郑渊洁这个作家？](https://www.zhihu.com/question/336686884)
 1. [万达清空所有海外地产项目，压缩并出售海外业务，释放了什么信号?](https://www.zhihu.com/question/432067258)
@@ -63,7 +67,6 @@
 1. [生二胎真的有意义吗？](https://www.zhihu.com/question/425037986)
 1. [一个男性可以可爱到什么程度？](https://www.zhihu.com/question/56716848)
 1. [有没有搞笑好玩的小说？](https://www.zhihu.com/question/310245092)
-1. [什么是少女感？有哪些充分体现少女感的妹子？](https://www.zhihu.com/question/30801926)
 1. [你是如何排解负面情绪的？](https://www.zhihu.com/question/264239712)
 1. [怎样让女朋友戒掉打游戏呢？](https://www.zhihu.com/question/431106637)
 1. [如何评价《秦时明月之沧海横流》第 11 集？](https://www.zhihu.com/question/432048260)
