--- a/archives/2020-11-28.md
+++ b/archives/2020-11-28.md
@@ -1,9 +1,9 @@
 # 2020-11-28
 
-共 60 条
+共 63 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sat Nov 28 2020 03:01:04 GMT+0800 (CST) -->
+<!-- 最后更新时间 Sat Nov 28 2020 04:01:19 GMT+0800 (CST) -->
 1. [如何看待武汉理工学生发起联署活动抵制导师王攀恢复招研资格？](https://www.zhihu.com/question/432207501)
 1. [如何看待「康巴汉子」丁真为家乡四川理塘拍摄的旅游宣传片？](https://www.zhihu.com/question/432035858)
 1. [拉屎拉到干净是种怎样的体验？](https://www.zhihu.com/question/59725811)
@@ -12,48 +12,51 @@
 1. [哈工大大二学生在自习室死亡，有哪些信息值得关注？](https://www.zhihu.com/question/431952602)
 1. [成都大学毛洪涛溺亡调查结果公布，你怎么看？有哪些信息值得关注？](https://www.zhihu.com/question/432244987)
 1. [澳媒称澳大利亚 53 艘煤炭船在华滞留一个多月，澳总理回应「我们想与中国和谐相处」，对此你怎么看？](https://www.zhihu.com/question/432238606)
-1. [为什么动物是雄性漂亮，而人正相反？](https://www.zhihu.com/question/431261008)
 1. [有哪些令人大跌眼镜的「骚」操作？](https://www.zhihu.com/question/431045341)
-1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
 1. [如何看待外媒称：特朗普表示如果选举人团投票给拜登，他将离开白宫？](https://www.zhihu.com/question/432193913)
+1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
+1. [为什么动物是雄性漂亮，而人正相反？](https://www.zhihu.com/question/431261008)
 1. [如何看待联合国报告称，新冠疫情恐将令女性地位倒退 25 年？](https://www.zhihu.com/question/432196776)
 1. [如何看待 11 月 26 日传奇球星马拉多纳葬礼的殡仪人员晒与马拉多纳遗体自拍，激起众怒被开除？](https://www.zhihu.com/question/432200786)
 1. [如果张艺谋来到《演员请就位》，坐在李成儒的位置上，怼陈凯歌会如何？](https://www.zhihu.com/question/427904800)
-1. [如果你得到了一个体积为1L，容积为1000L 的杯子，你会用它来做什么？](https://www.zhihu.com/question/431185261)
-1. [杭州一女保洁误入男浴室撞见领导洗澡被罚 2000 元，物业表示「撞见领导洗澡，比较严重」，罚款合理吗？](https://www.zhihu.com/question/432092160)
 1. [因为穷，你做过什么卑微的事情？](https://www.zhihu.com/question/421158576)
-1. [如何看待美媒称特朗普政府又开展清洗，基辛格等多人突然被撤职？](https://www.zhihu.com/question/432202806)
 1. [每天跳绳2000下会发生什么改变？](https://www.zhihu.com/question/295812047)
-1. [河南卫辉一小学校门口文具店卖电子烟给小学生，20 元 1 根，家长怒斥：毫无底线，你怎么看？](https://www.zhihu.com/question/432069100)
+1. [如何看待美媒称特朗普政府又开展清洗，基辛格等多人突然被撤职？](https://www.zhihu.com/question/432202806)
 1. [教科书上解释母系社会是因为女性采集更有保障，男性的采集能力比女性差在哪里？](https://www.zhihu.com/question/431627014)
+1. [如何评价2020秋季赛胜者组第一轮成都AG4：0零封WB.TS？](https://www.zhihu.com/question/432301070)
 1. [26岁考上研究生，29岁毕业，没对象，没工作，是不是很失败？](https://www.zhihu.com/question/28369809)
-1. [如何评价红米发布 Redmi Note 9 4G，4G 市场还有多少需求？](https://www.zhihu.com/question/432160410)
-1. [如何看待公证处回应老人送房给水果摊主「反复确认后办理公证」，摊主表示「赡养老人十年，获房心安理得」？](https://www.zhihu.com/question/432060850)
-1. [婆婆对儿媳说：我儿子可真听你的话，怎么回才显得情商高？](https://www.zhihu.com/question/431787513)
+1. [售卖燕窝遭「打假」，辛巴道歉称确实存在夸大宣传，所涉燕窝退一赔三，你怎么看？](https://www.zhihu.com/question/432287360)
 1. [如何看待唐家三少直播秀码字手速，一小时8000字？网文作者需要必备的基础技能有哪些？](https://www.zhihu.com/question/432302960)
-1. [《流浪地球 2》官宣定档 2023 年大年初一，导演表示剧本构思已经初步完成，你猜测故事会怎么发展？](https://www.zhihu.com/question/432161529)
+1. [如何评价红米发布 Redmi Note 9 4G，4G 市场还有多少需求？](https://www.zhihu.com/question/432160410)
+1. [如果你得到了一个体积为1L，容积为1000L 的杯子，你会用它来做什么？](https://www.zhihu.com/question/431185261)
 1. [为什么每次化妆我都化的特别浓，一点都不精致自然，该怎么快速提高化妆水平？](https://www.zhihu.com/question/428019867)
-1. [如何评价2021张宇四套卷？](https://www.zhihu.com/question/431587375)
+1. [河南卫辉一小学校门口文具店卖电子烟给小学生，20 元 1 根，家长怒斥：毫无底线，你怎么看？](https://www.zhihu.com/question/432069100)
 1. [什么是真爱？](https://www.zhihu.com/question/20106521)
+1. [如何评价2021张宇四套卷？](https://www.zhihu.com/question/431587375)
 1. [想养猫，哪种猫最蠢？](https://www.zhihu.com/question/424906246)
 1. [在设计院工作每天都很痛苦怎么办?](https://www.zhihu.com/question/429167206)
 1. [如何评价美剧《女王的棋局》（又名《后翼弃兵》Queen's Gambit）？](https://www.zhihu.com/question/425416775)
+1. [杭州一女保洁误入男浴室撞见领导洗澡被罚 2000 元，物业表示「撞见领导洗澡，比较严重」，罚款合理吗？](https://www.zhihu.com/question/432092160)
 1. [大学生真的要谈一场恋爱吗？](https://www.zhihu.com/question/427969824)
 1. [四大新科五年顶薪球员（塔图姆、米切尔、阿德巴约、福克斯）谁最可能水掉？](https://www.zhihu.com/question/432125653)
 1. [六级听力怎么训练？](https://www.zhihu.com/question/29649329)
 1. [扉间和佩恩六道打起来会怎样？](https://www.zhihu.com/question/430221530)
 1. [为什么在国产车进步如此明显的情况下，还有那么多人迷恋合资？](https://www.zhihu.com/question/359491361)
-1. [为什么机箱这么没技术含量的东西有些会和高端的cpu一样贵？](https://www.zhihu.com/question/59240026)
 1. [27岁确诊糖尿病，人生是不是没希望了?](https://www.zhihu.com/question/426991242)
 1. [我努力读书是为了什么？](https://www.zhihu.com/question/430328933)
-1. [考研如何选择目标学校及专业？](https://www.zhihu.com/question/31000102)
 1. [你这一年最丧的一次是因为什么？是怎么过来的？](https://www.zhihu.com/question/431950922)
+1. [考研如何选择目标学校及专业？](https://www.zhihu.com/question/31000102)
 1. [那些曾经出现在电影里的「神车」，你钟爱哪款？](https://www.zhihu.com/question/432247074)
-1. [前任让你明白了什么?](https://www.zhihu.com/question/404611519)
-1. [中国有哪些名头很响却已经散佚的古籍？](https://www.zhihu.com/question/26049905)
-1. [明知道熬夜不好，却习惯性熬夜，你怎么看？](https://www.zhihu.com/question/65902794)
-1. [一个人过生日和一个人去医院你接受不了哪个 ？](https://www.zhihu.com/question/422932336)
 1. [分手后该不该留联系方式？](https://www.zhihu.com/question/430885996)
+1. [明知道熬夜不好，却习惯性熬夜，你怎么看？](https://www.zhihu.com/question/65902794)
+1. [中国有哪些名头很响却已经散佚的古籍？](https://www.zhihu.com/question/26049905)
+1. [一个人过生日和一个人去医院你接受不了哪个 ？](https://www.zhihu.com/question/422932336)
+1. [前任让你明白了什么?](https://www.zhihu.com/question/404611519)
+1. [婆婆对儿媳说：我儿子可真听你的话，怎么回才显得情商高？](https://www.zhihu.com/question/431787513)
+1. [94 版和新版《三国演义》中，刘备扮演者孙彦军与于和伟相比，谁更符合原著中刘备的形象？](https://www.zhihu.com/question/30186921)
+1. [如何看待公证处回应老人送房给水果摊主「反复确认后办理公证」，摊主表示「赡养老人十年，获房心安理得」？](https://www.zhihu.com/question/432060850)
+1. [《流浪地球 2》官宣定档 2023 年大年初一，导演表示剧本构思已经初步完成，你猜测故事会怎么发展？](https://www.zhihu.com/question/432161529)
+1. [为什么机箱这么没技术含量的东西有些会和高端的cpu一样贵？](https://www.zhihu.com/question/59240026)
 1. [如何评价哈工大学生欲举报宿管阿姨感恩节送巧克力，称「作为宿舍辅导员，宣传这种西方节日，非常不妥」？](https://www.zhihu.com/question/432119474)
 1. [如何改善出租车司机越来越不赚钱的现状？](https://www.zhihu.com/question/432136728)
 1. [河南焦作教育局规定教师不亲自批改作业一律取消职务晋级资格，如何看待这一规定？](https://www.zhihu.com/question/432048707)
