--- a/archives/2020-11-28.md
+++ b/archives/2020-11-28.md
@@ -1,58 +1,65 @@
 # 2020-11-28
 
-共 88 条
+共 95 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sat Nov 28 2020 10:01:24 GMT+0800 (CST) -->
-1. [如何看待武汉理工学生发起联署活动抵制导师王攀恢复招研资格？](https://www.zhihu.com/question/432207501)
+<!-- 最后更新时间 Sat Nov 28 2020 11:01:10 GMT+0800 (CST) -->
 1. [如何看待「康巴汉子」丁真为家乡四川理塘拍摄的旅游宣传片？](https://www.zhihu.com/question/432035858)
 1. [有哪些令人大跌眼镜的「骚」操作？](https://www.zhihu.com/question/431045341)
-1. [川渝将共同积极申办 2032 年夏季奥运会，你有哪些期待？](https://www.zhihu.com/question/432245034)
 1. [澳媒称澳大利亚 53 艘煤炭船在华滞留一个多月，澳总理回应「我们想与中国和谐相处」，对此你怎么看？](https://www.zhihu.com/question/432238606)
+1. [如何看待唐家三少直播秀码字手速，一小时8000字？网文作者需要必备的基础技能有哪些？](https://www.zhihu.com/question/432302960)
+1. [如何看待武汉理工大学决定不予通过教师王攀的硕士研究生招生资格?](https://www.zhihu.com/question/432325134)
 1. [哈工大大二学生在自习室死亡，有哪些信息值得关注？](https://www.zhihu.com/question/431952602)
+1. [如何看待武汉理工学生发起联署活动抵制导师王攀恢复招研资格？](https://www.zhihu.com/question/432207501)
 1. [成都大学毛洪涛溺亡调查结果公布，你怎么看？有哪些信息值得关注？](https://www.zhihu.com/question/432244987)
 1. [如何看待 11 月 26 日传奇球星马拉多纳葬礼的殡仪人员晒与马拉多纳遗体自拍，激起众怒被开除？](https://www.zhihu.com/question/432200786)
-1. [如何看待唐家三少直播秀码字手速，一小时8000字？网文作者需要必备的基础技能有哪些？](https://www.zhihu.com/question/432302960)
+1. [川渝将共同积极申办 2032 年夏季奥运会，你有哪些期待？](https://www.zhihu.com/question/432245034)
 1. [售卖燕窝遭「打假」，辛巴道歉称确实存在夸大宣传，所涉燕窝退一赔三，你怎么看？](https://www.zhihu.com/question/432287360)
-1. [想养猫，哪种猫最蠢？](https://www.zhihu.com/question/424906246)
 1. [为什么在国产车进步如此明显的情况下，还有那么多人迷恋合资？](https://www.zhihu.com/question/359491361)
-1. [如何看待武汉理工大学决定不予通过教师王攀的硕士研究生招生资格?](https://www.zhihu.com/question/432325134)
 1. [如何评价2021张宇四套卷？](https://www.zhihu.com/question/431587375)
+1. [想养猫，哪种猫最蠢？](https://www.zhihu.com/question/424906246)
 1. [如何评价美剧《女王的棋局》（又名《后翼弃兵》Queen's Gambit）？](https://www.zhihu.com/question/425416775)
+1. [如何看待网传的「人大附中分校初一学生家教要求」？真实性如何？](https://www.zhihu.com/question/432248148)
 1. [27岁确诊糖尿病，人生是不是没希望了?](https://www.zhihu.com/question/426991242)
-1. [在设计院工作每天都很痛苦怎么办?](https://www.zhihu.com/question/429167206)
-1. [如何看待外媒称：特朗普表示如果选举人团投票给拜登，他将离开白宫？](https://www.zhihu.com/question/432193913)
 1. [扉间和佩恩六道打起来会怎样？](https://www.zhihu.com/question/430221530)
 1. [考研最后一个月能有多大提升？](https://www.zhihu.com/question/430985895)
 1. [晚上开车有什么办法可以防远光灯？](https://www.zhihu.com/question/424297922)
 1. [中国有哪些名头很响却已经散佚的古籍？](https://www.zhihu.com/question/26049905)
+1. [在设计院工作每天都很痛苦怎么办?](https://www.zhihu.com/question/429167206)
 1. [年轻人选工作时，如何抉择家与远方？](https://www.zhihu.com/question/432307927)
 1. [异地恋微信分手，见面还有挽回的机会吗?](https://www.zhihu.com/question/373410117)
-1. [长期炒股的人有哪些经验教训？](https://www.zhihu.com/question/30083453)
+1. [可以推荐一些让人很惊艳的个性签名吗？](https://www.zhihu.com/question/377553115)
 1. [如何看待周迅说现在的观众都很理性？](https://www.zhihu.com/question/432261416)
 1. [有哪些“百试不爽”，提高思考深度的思维模型？](https://www.zhihu.com/question/431330002)
+1. [如何看待一网友「小飞侠嘟咔嘟」发文称被父母逼婚赚彩礼，逃离后又被找到躲进派出所，目前双方达成调解？](https://www.zhihu.com/question/432227383)
+1. [临近考研还有四十天，如果再抓紧时间复习考研英语一，能不能再提升五分到十分？](https://www.zhihu.com/question/430354699)
+1. [如何看待外媒称：特朗普表示如果选举人团投票给拜登，他将离开白宫？](https://www.zhihu.com/question/432193913)
+1. [学习不好，是不努力的原因吗？](https://www.zhihu.com/question/430199851)
+1. [什么时候才能看得出孩子是否有某方面的潜力？](https://www.zhihu.com/question/430464740)
+1. [数学是一个自己骗自己的学科吗?](https://www.zhihu.com/question/421203214)
 1. [一个人过生日和一个人去医院你接受不了哪个 ？](https://www.zhihu.com/question/422932336)
-1. [因为穷，你做过什么卑微的事情？](https://www.zhihu.com/question/421158576)
+1. [长期炒股的人有哪些经验教训？](https://www.zhihu.com/question/30083453)
 1. [教科书上解释母系社会是因为女性采集更有保障，男性的采集能力比女性差在哪里？](https://www.zhihu.com/question/431627014)
-1. [94 版和新版《三国演义》中，刘备扮演者孙彦军与于和伟相比，谁更符合原著中刘备的形象？](https://www.zhihu.com/question/30186921)
-1. [如何评价张艺谋导演的电影《一秒钟》？](https://www.zhihu.com/question/284643087)
 1. [如何评价红米发布 Redmi Note 9 4G，4G 市场还有多少需求？](https://www.zhihu.com/question/432160410)
+1. [如何评价张艺谋导演的电影《一秒钟》？](https://www.zhihu.com/question/284643087)
+1. [94 版和新版《三国演义》中，刘备扮演者孙彦军与于和伟相比，谁更符合原著中刘备的形象？](https://www.zhihu.com/question/30186921)
 1. [为什么每次化妆我都化的特别浓，一点都不精致自然，该怎么快速提高化妆水平？](https://www.zhihu.com/question/428019867)
 1. [为什么人类的幼崽这么能哭？](https://www.zhihu.com/question/430870014)
-1. [26岁考上研究生，29岁毕业，没对象，没工作，是不是很失败？](https://www.zhihu.com/question/28369809)
 1. [大学生真的要谈一场恋爱吗？](https://www.zhihu.com/question/427969824)
+1. [26岁考上研究生，29岁毕业，没对象，没工作，是不是很失败？](https://www.zhihu.com/question/28369809)
 1. [如果张艺谋来到《演员请就位》，坐在李成儒的位置上，怼陈凯歌会如何？](https://www.zhihu.com/question/427904800)
-1. [每天跳绳2000下会发生什么改变？](https://www.zhihu.com/question/295812047)
-1. [我努力读书是为了什么？](https://www.zhihu.com/question/430328933)
 1. [如何看待联合国报告称，新冠疫情恐将令女性地位倒退 25 年？](https://www.zhihu.com/question/432196776)
+1. [每天跳绳2000下会发生什么改变？](https://www.zhihu.com/question/295812047)
 1. [如何看待美媒称特朗普政府又开展清洗，基辛格等多人突然被撤职？](https://www.zhihu.com/question/432202806)
 1. [如何看待哈尔滨工业大学回应「宿管感恩节送糖果」，称双方都是好心，但坚决禁止宗教活动进校园？](https://www.zhihu.com/question/432196540)
+1. [你觉得冷战可怕还是吵架可怕？](https://www.zhihu.com/question/428657121)
+1. [我努力读书是为了什么？](https://www.zhihu.com/question/430328933)
+1. [因为穷，你做过什么卑微的事情？](https://www.zhihu.com/question/421158576)
 1. [河南卫辉一小学校门口文具店卖电子烟给小学生，20 元 1 根，家长怒斥：毫无底线，你怎么看？](https://www.zhihu.com/question/432069100)
 1. [为什么亲密关系里的两个人总是会互相伤害？](https://www.zhihu.com/question/20724578)
 1. [如果你得到了一个体积为1L，容积为1000L 的杯子，你会用它来做什么？](https://www.zhihu.com/question/431185261)
 1. [女生一个人去广州应该注意什么?](https://www.zhihu.com/question/417581398)
 1. [怀孕了，有哪些「过来人经验」是真的要听的？](https://www.zhihu.com/question/403070174)
-1. [你觉得冷战可怕还是吵架可怕？](https://www.zhihu.com/question/428657121)
 1. [你这一年最丧的一次是因为什么？是怎么过来的？](https://www.zhihu.com/question/431950922)
 1. [当你发现自己孤独时，你最想和谁联系？](https://www.zhihu.com/question/428100137)
 1. [四大新科五年顶薪球员（塔图姆、米切尔、阿德巴约、福克斯）谁最可能水掉？](https://www.zhihu.com/question/432125653)
