--- a/archives/2020-11-28.md
+++ b/archives/2020-11-28.md
@@ -1,56 +1,61 @@
 # 2020-11-28
 
-共 176 条
+共 181 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sat Nov 28 2020 22:01:24 GMT+0800 (CST) -->
-1. [如何看待武汉理工大学决定不予通过教师王攀的硕士研究生招生资格?](https://www.zhihu.com/question/432325134)
+<!-- 最后更新时间 Sat Nov 28 2020 23:01:23 GMT+0800 (CST) -->
 1. [如何看待农妇打完农药遇强奸，用药水箱软管勒死施暴男子，检察院认为「属于正当防卫，依法不负刑事责任」？](https://www.zhihu.com/question/432282922)
-1. [成都大学毛洪涛溺亡调查结果公布，你怎么看？有哪些信息值得关注？](https://www.zhihu.com/question/432244987)
+1. [如何看待武汉理工大学决定不予通过教师王攀的硕士研究生招生资格?](https://www.zhihu.com/question/432325134)
 1. [如何看待网上流传「无门槛加到高学历优质男方法」：检索论文，给名校作者发邮件借讨论学术之名要微信？](https://www.zhihu.com/question/432373156)
 1. [伊朗媒体称，一名伊朗核科学家在德黑兰附近被暗杀，有哪些信息值得关注？](https://www.zhihu.com/question/432314788)
 1. [如何看待暴雪过后鸡西一拾荒老人主动为餐馆扫雪，餐馆老板表示「只要我的小店在，就有老人吃饭的地方」？](https://www.zhihu.com/question/432291197)
+1. [成都大学毛洪涛溺亡调查结果公布，你怎么看？有哪些信息值得关注？](https://www.zhihu.com/question/432244987)
 1. [如何看待60岁以上老人（不分地域）在山东免费乘公交? 对其他地区是否有借鉴意义？](https://www.zhihu.com/question/432139650)
 1. [如何评价第十二届全国大学生数学竞赛初赛非数学类试题？](https://www.zhihu.com/question/432356812)
+1. [考上 985、211 的学生在高三能有多疯狂？](https://www.zhihu.com/question/336622881)
 1. [王者荣耀 觉悟人机20关如何过？](https://www.zhihu.com/question/432334068)
 1. [男博士是喜欢找个女博士，还是愿意找个比自己小几岁的师妹？](https://www.zhihu.com/question/302750196)
-1. [考上 985、211 的学生在高三能有多疯狂？](https://www.zhihu.com/question/336622881)
 1. [如何看待 2021 年起我国将全面禁止进口固体废物，环境部将不再审批发放许可证？将产生哪些影响？](https://www.zhihu.com/question/432230746)
+1. [有没有什么可爱又略调皮的微信头像？](https://www.zhihu.com/question/312909236)
 1. [家庭收入一般，老婆一定要请个保姆在家带小孩，我该怎么办？](https://www.zhihu.com/question/430935340)
-1. [如何看待「康巴汉子」丁真为家乡四川理塘拍摄的旅游宣传片？](https://www.zhihu.com/question/432035858)
 1. [开一个盈利性自习室的可行性如何？](https://www.zhihu.com/question/36887220)
 1. [迭戈马拉多纳去世，阿根廷举国哀悼三天值得吗？](https://www.zhihu.com/question/432033390)
 1. [如何看待网传的「人大附中分校初一学生家教要求」？真实性如何？](https://www.zhihu.com/question/432248148)
-1. [为什么刺客信条越来越不优雅华丽了啊？](https://www.zhihu.com/question/429642551)
 1. [自己每天坚持看书，也每天坚持学习，但是为什么过了一段时间总觉得没有学一样？](https://www.zhihu.com/question/61269583)
-1. [《王者荣耀》新版绝悟AI二十关难度在什么水平?](https://www.zhihu.com/question/431430873)
-1. [为什么大部分人一辈子赚不到500万，却觉得25岁拿500万退休跑不赢通货膨胀活不下去？](https://www.zhihu.com/question/431742535)
-1. [2020年大概10万块左右买什么车呢?](https://www.zhihu.com/question/358157833)
 1. [数学为什么没有列在四大天坑专业中？](https://www.zhihu.com/question/431174381)
-1. [在大学里有不化妆的女生吗？](https://www.zhihu.com/question/327628390)
+1. [2020年大概10万块左右买什么车呢?](https://www.zhihu.com/question/358157833)
+1. [为什么大部分人一辈子赚不到500万，却觉得25岁拿500万退休跑不赢通货膨胀活不下去？](https://www.zhihu.com/question/431742535)
 1. [为什么圈子里的大佬们总喜欢组饭局，有什么事儿非得吃饭的时候说？](https://www.zhihu.com/question/432305015)
-1. [如何评价国产动漫《天官赐福》?](https://www.zhihu.com/question/392100278)
-1. [如何看待国内部分人群认为田园猫不如国外品种猫？](https://www.zhihu.com/question/430774441)
+1. [在大学里有不化妆的女生吗？](https://www.zhihu.com/question/327628390)
 1. [你身边有没有性子凉薄，感情匮乏的人？](https://www.zhihu.com/question/388065495)
+1. [如何评价国产动漫《天官赐福》?](https://www.zhihu.com/question/392100278)
+1. [多数狙击手电影里，狙击手不用弹夹，而是直接拉开枪栓把子弹放到枪膛里，这样做的目的是什么？](https://www.zhihu.com/question/431984892)
+1. [为什么人们都讨厌HR？](https://www.zhihu.com/question/357655494)
 1. [你心目中最好的战争电影是哪三部？](https://www.zhihu.com/question/40225004)
 1. [小小一个梁山泊，靠什么维持十万军马？](https://www.zhihu.com/question/34724965)
-1. [如何看待 11 月 28 日，人民日报发文《马保国闹剧，该立刻收场了》？这一「闹剧」可能会怎样收场？](https://www.zhihu.com/question/432378297)
-1. [为什么人们都讨厌HR？](https://www.zhihu.com/question/357655494)
-1. [985硕 2021 秋招0 offer是一种什么体验？](https://www.zhihu.com/question/430732154)
-1. [多数狙击手电影里，狙击手不用弹夹，而是直接拉开枪栓把子弹放到枪膛里，这样做的目的是什么？](https://www.zhihu.com/question/431984892)
 1. [当你越来越好的时候真的会遇到越来越好的人吗？](https://www.zhihu.com/question/426742349)
-1. [考研英语一到底有多难?](https://www.zhihu.com/question/366357267)
-1. [如何看待演员朱一龙获得2020年度影响力人物——年度演艺人物?](https://www.zhihu.com/question/432310754)
+1. [如何看待 11 月 28 日，人民日报发文《马保国闹剧，该立刻收场了》？这一「闹剧」可能会怎样收场？](https://www.zhihu.com/question/432378297)
+1. [985硕 2021 秋招0 offer是一种什么体验？](https://www.zhihu.com/question/430732154)
+1. [王嵋屌丝事件对小米集团的伤害有多大？](https://www.zhihu.com/question/432056369)
+1. [如何看待国内部分人群认为田园猫不如国外品种猫？](https://www.zhihu.com/question/430774441)
 1. [在你的心目中，谁是足球史上最伟大球员？马拉多纳，贝利，罗纳尔多，还是梅西？](https://www.zhihu.com/question/432026261)
+1. [一觉醒来，你发现自己的爱人是人工智能，你是否会和TA继续爱情？](https://www.zhihu.com/question/432365547)
 1. [如何挑选质优价廉的室内门？](https://www.zhihu.com/question/39693041)
-1. [高二学生，努力学习为什么成绩反而倒退？](https://www.zhihu.com/question/429960417)
+1. [你认为最美的一幅画是哪一幅？](https://www.zhihu.com/question/280293735)
+1. [你读过哪些你认为很伤感的句子？](https://www.zhihu.com/question/431504207)
 1. [除了考高分上好大学，学习到底是为了什么?](https://www.zhihu.com/question/427340353)
 1. [如何看待周迅说现在的观众都很理性？](https://www.zhihu.com/question/432261416)
-1. [研究生生涯遇到一个很菜的导师怎么办？](https://www.zhihu.com/question/431110371)
-1. [售卖燕窝遭「打假」，辛巴道歉称确实存在夸大宣传，所涉燕窝退一赔三，你怎么看？](https://www.zhihu.com/question/432287360)
-1. [goodnotes notability哪个好用呢？](https://www.zhihu.com/question/362005754)
-1. [《饥荒》新手怎么入门？](https://www.zhihu.com/question/53324225)
+1. [考研英语一到底有多难?](https://www.zhihu.com/question/366357267)
+1. [如何看待演员朱一龙获得2020年度影响力人物——年度演艺人物?](https://www.zhihu.com/question/432310754)
+1. [高二学生，努力学习为什么成绩反而倒退？](https://www.zhihu.com/question/429960417)
 1. [你有哪些住宿必备好吃不贵的零食？](https://www.zhihu.com/question/342445699)
+1. [《王者荣耀》新版绝悟AI二十关难度在什么水平?](https://www.zhihu.com/question/431430873)
+1. [售卖燕窝遭「打假」，辛巴道歉称确实存在夸大宣传，所涉燕窝退一赔三，你怎么看？](https://www.zhihu.com/question/432287360)
+1. [研究生生涯遇到一个很菜的导师怎么办？](https://www.zhihu.com/question/431110371)
+1. [为什么刺客信条越来越不优雅华丽了啊？](https://www.zhihu.com/question/429642551)
+1. [《饥荒》新手怎么入门？](https://www.zhihu.com/question/53324225)
+1. [如何看待「康巴汉子」丁真为家乡四川理塘拍摄的旅游宣传片？](https://www.zhihu.com/question/432035858)
+1. [goodnotes notability哪个好用呢？](https://www.zhihu.com/question/362005754)
 1. [各种语言有些什么书写奇葩的单词？](https://www.zhihu.com/question/431451034)
 1. [如何看待唐家三少直播秀码字手速，一小时8000字？网文作者需要必备的基础技能有哪些？](https://www.zhihu.com/question/432302960)
 1. [有没有什么病，令你一度陷入绝望却又峰回路转？](https://www.zhihu.com/question/432064544)
