--- a/archives/2020-12-06.md
+++ b/archives/2020-12-06.md
@@ -1,47 +1,59 @@
 # 2020-12-06
 
-共 146 条
+共 153 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sun Dec 06 2020 20:01:49 GMT+0800 (CST) -->
+<!-- 最后更新时间 Sun Dec 06 2020 21:01:19 GMT+0800 (CST) -->
 1. [互联网大公司都去做社区团购，盯上卖菜这门生意，原因是什么？](https://www.zhihu.com/question/433102679)
 1. [有哪些你觉得是常识，但大部分人好像并不知道的事？](https://www.zhihu.com/question/422686198)
 1. [如何看待崔娃在12月5日发布的《每日秀》上称「嫦娥五号登月，中国隐瞒疫情，会给外星人带去新冠病毒」？](https://www.zhihu.com/question/433586955)
-1. [钟离事件，米哈游内部决策出了什么问题？](https://www.zhihu.com/question/433445798)
 1. [给你 10 亿美元，但会有一只蚊子永远追杀你，你干不干？](https://www.zhihu.com/question/431629276)
+1. [钟离事件，米哈游内部决策出了什么问题？](https://www.zhihu.com/question/433445798)
 1. [家里蹲三年以上是怎样的感受？](https://www.zhihu.com/question/47521365)
-1. [为什么有些牙医不推荐使用电动牙刷？](https://www.zhihu.com/question/364359077)
 1. [有没有那种电影或者动漫让你觉得这辈子要是没看过真的白活了？](https://www.zhihu.com/question/431551442)
 1. [我大一，期末要让我们写2000左右的论文，论文格式是什么样的？](https://www.zhihu.com/question/306010952)
+1. [为什么有些牙医不推荐使用电动牙刷？](https://www.zhihu.com/question/364359077)
 1. [如何看待《名侦探柯南》黑衣组织二号成员RUM 朗姆身份公开？](https://www.zhihu.com/question/433340643)
 1. [怎么自学python，大概要多久？](https://www.zhihu.com/question/300985609)
 1. [还有二十几天考研，明知道已经考不上了，应该放弃吗？](https://www.zhihu.com/question/433016850)
 1. [虚无主义，到底有多可怕？](https://www.zhihu.com/question/309651606)
 1. [老是被一个女生说可爱是什么意思？](https://www.zhihu.com/question/430772511)
-1. [给一个以后想学量子物理的女高中生送圣诞礼物，送什么好？](https://www.zhihu.com/question/433012534)
-1. [一个女生怀孕有多辛苦？](https://www.zhihu.com/question/432439805)
+1. [如何看待2020年日语能力考难度（内含N1、N2考试答案）？](https://www.zhihu.com/question/433568875)
+1. [你暧昧期的聊天记录是怎么样的?](https://www.zhihu.com/question/356579521)
 1. [假如每人都有一次原地满血复活的机会（正常衰老死亡除外），这个世界会有何变化？](https://www.zhihu.com/question/278013607)
 1. [为什么程序员互相之间不能透露薪水?](https://www.zhihu.com/question/433369986)
 1. [一个初二学生期中成绩只考了570多分，他有希望上大学吗？](https://www.zhihu.com/question/431909193)
-1. [有没有什么极短的温柔短句？](https://www.zhihu.com/question/369015903)
 1. [黄磊智商有多高，神算子真的不是人设吗？](https://www.zhihu.com/question/428494879)
+1. [电影《一秒钟》中有哪些细思极恐的细节？](https://www.zhihu.com/question/432209188)
+1. [什么是情绪价值？](https://www.zhihu.com/question/326968879)
+1. [有没有那种穿越成恶毒女配最后和原男主在一起的文？](https://www.zhihu.com/question/393760164)
+1. [下一个十年（2020后），你觉得游戏在叙事上会有什么样的发展？](https://www.zhihu.com/question/432724655)
+1. [有哪些又惨又好笑的沙雕朋友圈文案？](https://www.zhihu.com/question/431631642)
+1. [有没有温柔至极的句子？](https://www.zhihu.com/question/432023518)
+1. [初中语文想考110分以上有多难？](https://www.zhihu.com/question/275772959)
 1. [2020年终最后的大促，有哪些值得捡漏的数码产品？](https://www.zhihu.com/question/433339883)
 1. [股票基本面如何分析？](https://www.zhihu.com/question/23192771)
+1. [请问有人用过踢脚线取暖器吗，效果怎样?](https://www.zhihu.com/question/26954696)
+1. [如何评价《演员请就位》第二季总决赛陈凯歌的《宝贝儿》及其表达的代孕伦理问题？](https://www.zhihu.com/question/433472711)
+1. [有哪些温柔的文案句子？](https://www.zhihu.com/question/369952269)
+1. [如何评价张雨绮这个人？](https://www.zhihu.com/question/308270021)
+1. [《王者荣耀》里有没有哪句台词尴尬到会让你想放弃这个英雄的？](https://www.zhihu.com/question/421011240)
+1. [一个女生怀孕有多辛苦？](https://www.zhihu.com/question/432439805)
+1. [夸眼睛好看的句子或者诗有哪些？](https://www.zhihu.com/question/317764542)
+1. [我要网恋奔现了，但是照片与本人不符，我已经坦白，但是人家还是要见面，我该怎么办?](https://www.zhihu.com/question/423101015)
+1. [既然宇宙是熵增的，那为什么会出现人类，为什么会出现生命？](https://www.zhihu.com/question/429454468)
+1. [有没有什么极短的温柔短句？](https://www.zhihu.com/question/369015903)
 1. [有什么不开心的文案？](https://www.zhihu.com/question/431597818)
 1. [写小说有哪些不得不说的技巧？](https://www.zhihu.com/question/35188574)
-1. [夸眼睛好看的句子或者诗有哪些？](https://www.zhihu.com/question/317764542)
-1. [什么是情绪价值？](https://www.zhihu.com/question/326968879)
-1. [初中语文想考110分以上有多难？](https://www.zhihu.com/question/275772959)
-1. [有哪些温柔的文案句子？](https://www.zhihu.com/question/369952269)
-1. [如何评价《演员请就位》第二季总决赛陈凯歌的《宝贝儿》及其表达的代孕伦理问题？](https://www.zhihu.com/question/433472711)
-1. [如何评价郭敬明指导的电影《冷血狂宴》（《爵迹 2》）？](https://www.zhihu.com/question/362881184)
-1. [请问有人用过踢脚线取暖器吗，效果怎样?](https://www.zhihu.com/question/26954696)
-1. [如何评价张雨绮这个人？](https://www.zhihu.com/question/308270021)
+1. [给一个以后想学量子物理的女高中生送圣诞礼物，送什么好？](https://www.zhihu.com/question/433012534)
 1. [有什么可以坚持一生的好习惯？](https://www.zhihu.com/question/427072891)
-1. [《王者荣耀》里有没有哪句台词尴尬到会让你想放弃这个英雄的？](https://www.zhihu.com/question/421011240)
-1. [我要网恋奔现了，但是照片与本人不符，我已经坦白，但是人家还是要见面，我该怎么办?](https://www.zhihu.com/question/423101015)
+1. [哪些话支撑你熬过了整个高三？](https://www.zhihu.com/question/398139905)
+1. [如何评价郭敬明指导的电影《冷血狂宴》（《爵迹 2》）？](https://www.zhihu.com/question/362881184)
+1. [走不出去失恋后的恐慌，人活着的意义是什么呢？](https://www.zhihu.com/question/432260357)
 1. [一个清华大学的毕业生，他会希望自己的孩子上什么学校呢?](https://www.zhihu.com/question/403355024)
-1. [既然宇宙是熵增的，那为什么会出现人类，为什么会出现生命？](https://www.zhihu.com/question/429454468)
+1. [如何评价 Neil Druckmann 将升任为顽皮狗工作室联合总裁？](https://www.zhihu.com/question/433440800)
+1. [大家做项目管理时都用的什么工具？](https://www.zhihu.com/question/38813402)
+1. [你们听过最美的一句晚安？](https://www.zhihu.com/question/22876712)
 1. [INFP有啥优点潜质天赋？](https://www.zhihu.com/question/407092656)
 1. [你最满意自己的科研成果是什么？](https://www.zhihu.com/question/432926695)
 1. [消费主义有哪些典型语录？](https://www.zhihu.com/question/343358503)
@@ -68,16 +80,13 @@
 1. [在大学，一个人学习，吃饭，一个人生活，怎么去抵御内心的孤独？](https://www.zhihu.com/question/426063220)
 1. [有iPhone 12 mini的真实用户吗？能不能谈谈使用感受？](https://www.zhihu.com/question/430470449)
 1. [有没有什么特别搞笑的笑话？](https://www.zhihu.com/question/265877235)
-1. [如何评价 Neil Druckmann 将升任为顽皮狗工作室联合总裁？](https://www.zhihu.com/question/433440800)
 1. [如何比较日本JUMP漫画《电锯人》和《咒术回战》？](https://www.zhihu.com/question/430534434)
 1. [三四个月大的猫咪老是咬人怎么办，可以打它吗？](https://www.zhihu.com/question/422222875)
 1. [2020 KPL 秋季赛LGD大鹅 4:0 TS，如何评价这场比赛？](https://www.zhihu.com/question/433463839)
 1. [重庆一煤矿发生一氧化碳超限事故  23 人被困井下，目前事件情况如何？有哪些信息值得关注？](https://www.zhihu.com/question/433357755)
-1. [你们听过最美的一句晚安？](https://www.zhihu.com/question/22876712)
 1. [方脸是一种什么体验？](https://www.zhihu.com/question/35513225)
 1. [如何看待安徽一女孩溺亡，涉事民辅警被指救援不力停职调查？救援过程是否存在问题？](https://www.zhihu.com/question/433415189)
 1. [为什么我觉得《剑来》很难看下去?](https://www.zhihu.com/question/383895746)
-1. [走不出去失恋后的恐慌，人活着的意义是什么呢？](https://www.zhihu.com/question/432260357)
 1. [人生为什么有时候很累，可是我们还是坚持要走下去？](https://www.zhihu.com/question/431715370)
 1. [一克拉钻石戒指多少钱?](https://www.zhihu.com/question/54136414)
 1. [如何评价《演员请就位》第二季总决赛邀请肖战作为表演嘉宾？](https://www.zhihu.com/question/433469668)
@@ -86,13 +95,11 @@
 1. [怎样才能锻炼自己说话能力？](https://www.zhihu.com/question/38898351)
 1. [明初开国元勋为何面对朱元璋的屠刀时束手就擒？](https://www.zhihu.com/question/432110875)
 1. [CDN是什么？使用CDN有什么优势？](https://www.zhihu.com/question/36514327)
-1. [哪些话支撑你熬过了整个高三？](https://www.zhihu.com/question/398139905)
 1. [原神是不是中国第一个产生大范围文化输出的「手机游戏作品」？](https://www.zhihu.com/question/432183530)
 1. [有哪些是你健身之后才知道的伪健身知识？](https://www.zhihu.com/question/303672817)
 1. [在准备四/六级考试过程中，你有哪些受益匪浅的小技巧？](https://www.zhihu.com/question/413922867)
 1. [如何看待情感咨询师称「 80% 以上的客户很在乎对方学校」？为什么 985 高学历相亲圈这么流行？](https://www.zhihu.com/question/433254938)
 1. [高三最后200天，成绩差的要命，我还有救吗？](https://www.zhihu.com/question/431426325)
-1. [大家做项目管理时都用的什么工具？](https://www.zhihu.com/question/38813402)
 1. [投资银行的真实现状是怎样的？](https://www.zhihu.com/question/35534609)
 1. [为什么扶苏接到胡亥的假圣旨，那么草率地自行了断？](https://www.zhihu.com/question/22283635)
 1. [如何看待海南某律师在车上留条，警告交警不得处罚一事 ？](https://www.zhihu.com/question/433328693)
